[gd_scene load_steps=3 format=3 uid="uid://cxixnc61lun1t"]

[ext_resource type="Script" path="res://addons/lk_console/console.gd" id="1_180ms"]
[ext_resource type="Theme" uid="uid://boswibt5crvms" path="res://addons/lk_console/console_theme.tres" id="1_bhaeq"]

[node name="Console" type="Window"]
transparent_bg = true
title = "Console"
position = Vector2i(0, 36)
size = Vector2i(600, 350)
transparent = true
min_size = Vector2i(600, 350)
theme = ExtResource("1_bhaeq")
script = ExtResource("1_180ms")
hide_on_cancel = false

[node name="BackgroundPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Messages" type="RichTextLabel" parent="VBoxContainer/PanelContainer/ScrollContainer/MessagesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
mouse_default_cursor_shape = 1
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
context_menu_enabled = true
selection_enabled = true
deselect_on_focus_loss_enabled = false

[node name="Separator" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Separator" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="CommandInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Enter command..."
caret_blink = true
caret_blink_interval = 0.5

[node name="Separator2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="Separator3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Separator2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[connection signal="close_requested" from="." to="." method="set_visible" binds= [false]]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/CommandInput" to="." method="_on_command_input_text_submitted"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_down"]
